--- a/style.css
+++ b/style.css
@@ -18,8 +18,13 @@ main {
   padding: 1rem;
 }
 
-.view-1 .top {
+.view-1 {
   padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.view-1 .top {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -31,15 +36,26 @@ main {
   opacity: 0.6;
 }
 .view-1 .bottom {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+.view-1 .bottom .images {
+  width: 100%;
+  height: 100%;
+  gap: 1rem;
   display: grid;
   grid-template-areas: " a a b b " " a a b b " " a a b b " " a a b b " " a a b b " " a a c c " " a a c c " " a a c c ";
 }
-.view-1 .bottom .img-a {
+.view-1 .bottom .images img {
+  width: 100%;
+  height: 100%;
+}
+.view-1 .bottom .images .img-a {
   grid-area: a;
 }
-.view-1 .bottom .img-b {
+.view-1 .bottom .images .img-b {
   grid-area: b;
 }
-.view-1 .bottom .img-c {
+.view-1 .bottom .images .img-c {
   grid-area: c;
 }/*# sourceMappingURL=style.css.map */
