--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,11 @@ main {
 }
 
 .view-1 {
+  padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
   .top {
-    padding-top: 5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -33,26 +36,37 @@ main {
   }
 
   .bottom {
-    display: grid;
-    grid-template-areas: 
-       " a a b b "
-       " a a b b "
-       " a a b b "
-       " a a b b "
-       " a a b b "
-       " a a c c "
-       " a a c c "
-       " a a c c "
-    ;
+    width: 100%;
+    aspect-ratio: 1/1;
+    .images {
+      width: 100%;
+      height: 100%;
+      gap: 1rem;
+      display: grid;
+      grid-template-areas:
+        " a a b b "
+        " a a b b "
+        " a a b b "
+        " a a b b "
+        " a a b b "
+        " a a c c "
+        " a a c c "
+        " a a c c ";
 
-    .img-a{
+      img {
+        width: 100%;
+        height: 100%;
+      }
+
+      .img-a {
         grid-area: a;
-    }
-    .img-b{
-        grid-area: b;        
-    }
-    .img-c{
+      }
+      .img-b {
+        grid-area: b;
+      }
+      .img-c {
         grid-area: c;
+      }
     }
   }
 }
