--- a/style.css
+++ b/style.css
@@ -42,20 +42,29 @@ main {
 .view-1 .bottom .images {
   width: 100%;
   height: 100%;
-  gap: 1rem;
   display: grid;
-  grid-template-areas: " a a b b " " a a b b " " a a b b " " a a b b " " a a b b " " a a c c " " a a c c " " a a c c ";
+  grid-template-areas: "a a b b" "a a b b" "a a b b" "a a b b" "a a b b" "a a c c" "a a c c" "a a c c";
+  gap: 2rem;
 }
 .view-1 .bottom .images img {
-  width: 100%;
+  border-radius: 2rem;
   height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.view-1 .bottom .images div {
+  height: 100%;
+  width: 100%;
 }
 .view-1 .bottom .images .img-a {
   grid-area: a;
 }
 .view-1 .bottom .images .img-b {
   grid-area: b;
+  max-height: 20rem;
 }
 .view-1 .bottom .images .img-c {
   grid-area: c;
+  max-height: 10rem;
 }/*# sourceMappingURL=style.css.map */
